# htmleditor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: htmleditor.py
test/: test_html_edit.py  test_html_editor.py  test_html_writer.py
